added functionality for OracleDatapoint (better copy and new constructor).